# ufo-core

./: CMakeLists.txt
docs/: CMakeLists.txt
matlab/: CMakeLists.txt  build_mex.m
matlab/include/: mexUfo_handle.h  ufo_mex_api.h
matlab/src/: mexUfo_handle.c  ufo_buffer.c  ufo_commands.c  ufo_dispatch.c  ufo_mex.c
matlab/ufo/: Buffer.m  Contents.m  PluginManager.m  Resources.m  Scheduler.m  Task.m  TaskGraph.m
tests/: mex_smoke.c  runAllTests.m
tests/+ufoTest/: TestBuffer.m  TestClassBehavior.m  TestConcurrency.m  TestErrorMapping.m  TestOpenCLFallback.m  TestPluginManager.m  TestReconstructionE2E.m  TestSchedulerIntegration.m  TestTaskGraph.m
tests/unit/: CMakeLists.txt  meson.build  mex_stub.h  test-dispatch.c  test-handle-concurrency.c  test-mex-handle.c  test-opencl.c  test-suite.c  test-suite.h
ufo/: CMakeLists.txt
